--- a/Hackathon.csproj
+++ b/Hackathon.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.2"/>
     <PackageReference Include="CsvHelper" Version="27.2.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.2"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
   </ItemGroup>
 </Project>
