--- a/Hackathon.csproj
+++ b/Hackathon.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="CsvHelper" Version="27.2.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.2"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
+    <PackageReference Include="LightInject" Version="6.4.1"/>
   </ItemGroup>
 </Project>
